crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_custom_dashed.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<my-widget data-id=\"1\"></my-widget>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 36,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: Tag(
                        "my-widget",
                    ),
                },
                attrs: [
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            value: "data-id",
                        },
                        value: Some(
                            Str(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 23,
                                        },
                                    },
                                    value: "1",
                                },
                            ),
                        ),
                    },
                ],
                children: [],
                self_closing: false,
            },
        ),
    ),
}
