crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_nested.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div><p>a</p><p>b</p></div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 28,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Element(
                            Element {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 8,
                                        },
                                    },
                                    value: Tag(
                                        "p",
                                    ),
                                },
                                attrs: [],
                                children: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                        },
                                        value: Text(
                                            "a",
                                        ),
                                    },
                                ],
                                self_closing: false,
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: Element(
                            Element {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                    },
                                    value: Tag(
                                        "p",
                                    ),
                                },
                                attrs: [],
                                children: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 18,
                                            },
                                        },
                                        value: Text(
                                            "b",
                                        ),
                                    },
                                ],
                                self_closing: false,
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
