crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_self_closing_no_space.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<br/>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Tag(
                        "br",
                    ),
                },
                attrs: [],
                children: [],
                self_closing: true,
            },
        ),
    ),
}
