crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_text.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>hello</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: Text(
                            "hello",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
