crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_text_and_holes.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{props.label}: {count} ({double})</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 41,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                },
                                value: Access {
                                    record: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                        },
                                        value: Var(
                                            "props",
                                        ),
                                    },
                                    field: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 16,
                                            },
                                        },
                                        value: "label",
                                    },
                                },
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 17,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                        value: Text(
                            ": ",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 26,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 20,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 25,
                                    },
                                },
                                value: Var(
                                    "count",
                                ),
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 26,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: Text(
                            " (",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 36,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 29,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 35,
                                    },
                                },
                                value: Var(
                                    "double",
                                ),
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 36,
                            },
                            end: Position {
                                line: 1,
                                column: 37,
                            },
                        },
                        value: Text(
                            ")",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
