crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_attr_expr.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div class={)}>"
---
Markup(
    Attr(
        Expr(
            Start(
                1,
                13,
            ),
            1,
            13,
        ),
        1,
        6,
    ),
    1,
    1,
)
