crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_attr_expr_unclosed.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div class={x id=\"y\">"
---
Markup(
    Attr(
        ExprEnd(
            ExpectedEnd {
                opening: Position {
                    line: 1,
                    column: 12,
                },
                boundary: Position {
                    line: 1,
                    column: 14,
                },
                unexpected: Position {
                    line: 1,
                    column: 15,
                },
            },
        ),
        1,
        6,
    ),
    1,
    1,
)
